--- a/ALgorithms/Assignment.ipynb
+++ b/ALgorithms/Assignment.ipynb
@@ -193,6 +193,328 @@
     "    table.display()\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_combinations(target, numbers, current_index=0, current_combination=[]):\n",
+    "    if target == 0:\n",
+    "        print(current_combination)\n",
+    "        return\n",
+    "\n",
+    "    if current_index >= len(numbers):\n",
+    "        return\n",
+    "\n",
+    "    # Include the current number if it doesn't exceed the target\n",
+    "    if target >= numbers[current_index]:\n",
+    "        find_combinations(target - numbers[current_index], numbers, current_index + 2, current_combination + [numbers[current_index]])\n",
+    "\n",
+    "    # Skip the current number\n",
+    "    find_combinations(target, numbers, current_index + 1, current_combination)\n",
+    "\n",
+    "target = 50\n",
+    "numbers = [1, 3, 5, 8, 13, 21]\n",
+    "\n",
+    "find_combinations(target, numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_combinations(target, numbers):\n",
+    "    n = len(numbers)\n",
+    "    # Create a 2D table to store solutions to subproblems\n",
+    "    dp = [[0] * (target + 1) for _ in range(n + 1)]\n",
+    "\n",
+    "    # Initialize the first row to 1 (base case)\n",
+    "    for i in range(n + 1):\n",
+    "        dp[i][0] = 1\n",
+    "\n",
+    "    # Fill the dp table using bottom-up dynamic programming\n",
+    "    for i in range(1, n + 1):\n",
+    "        for j in range(1, target + 1):\n",
+    "            if numbers[i - 1] <= j:\n",
+    "                dp[i][j] = dp[i - 2][j] + dp[i - 1][j - numbers[i - 1]]\n",
+    "            else:\n",
+    "                dp[i][j] = dp[i - 1][j]\n",
+    "\n",
+    "    # Backtrack to find the combinations\n",
+    "    def backtrack(i, j, combination):\n",
+    "        if i == 0 and j == 0:\n",
+    "            print(combination)\n",
+    "            return\n",
+    "        if i < 1 or j < 0:\n",
+    "            return\n",
+    "        if dp[i][j] == dp[i - 1][j]:\n",
+    "            backtrack(i - 1, j, combination)\n",
+    "        if i >= 2 and j >= numbers[i - 1]:\n",
+    "            backtrack(i - 2, j - numbers[i - 1], combination + [numbers[i - 1]])\n",
+    "\n",
+    "    combination = []\n",
+    "    backtrack(n, target, combination)\n",
+    "\n",
+    "target = 50\n",
+    "numbers = [1, 3, 5, 8, 13, 21]\n",
+    "\n",
+    "find_combinations(target, numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rd\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    if n <= 0:\n",
+    "        return \"1\"\n",
+    "    elif n == 1:\n",
+    "        return \"1\"\n",
+    "    else:\n",
+    "        a, b = 1, 1\n",
+    "        # sequence = \"1 + 1\"\n",
+    "        sequence =[]\n",
+    "        sequence.append(a)\n",
+    "        sequence.append(b)\n",
+    "        for _ in range(2, n - 1):\n",
+    "            a, b = b, a + b\n",
+    "            # sequence += f\" + {b}\"\n",
+    "            sequence.append(b)\n",
+    "            # sequence.append(b)\n",
+    "        return sequence\n",
+    "def showSum(sequence,number):\n",
+    "    for i in range(len(sequence)):\n",
+    "        if sequence[i]!= number:\n",
+    "# number = int(input(\"Enter your number: \"))\n",
+    "new = fibonacci(15)\n",
+    "print(new)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci Sequence: [0, 1, 1, 2, 3]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m sequence \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(fibonacci(number))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFibonacci Sequence:\u001b[39m\u001b[39m\"\u001b[39m, sequence)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mprint\u001b[39m(showSum(sequence,current,target))\n",
+      "\u001b[1;32m/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m newlist\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m i \u001b[39m=\u001b[39m\u001b[39m0\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mwhile\u001b[39;00m(i\u001b[39m<\u001b[39m\u001b[39mlen\u001b[39m(sequence)):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mif\u001b[39;00m sequence[i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m>\u001b[39mtarget:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dmacs-5/Documents/mtech_2023/ALgorithms/Assignment.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         \u001b[39msum\u001b[39m \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m sequence[i]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(n):\n",
+    "        yield a\n",
+    "        a, b = b, a + b\n",
+    "def showSum(sequence,current,target):\n",
+    "    newlist=[]\n",
+    "    sum = 0\n",
+    "    if target == 0:\n",
+    "        return newlist\n",
+    "    i =0\n",
+    "    while(i<len(sequence)):\n",
+    "        if sequence[i+1]>target:\n",
+    "            sum += sequence[i]\n",
+    "            newlist.append(sequence[i])\n",
+    "            i+=1\n",
+    "    return showSum(sequence,target-sum)\n",
+    "\n",
+    "\n",
+    "number = int(input(\"Enter the number of terms: \"))\n",
+    "target = int(input(\"Enter the target number\"))\n",
+    "current = target\n",
+    "sequence = list(fibonacci(number))\n",
+    "print(\"Fibonacci Sequence:\", sequence)\n",
+    "print(showSum(sequence,current,target))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci Sequence: [0, 1, 1, 2, 3, 5, 8]\n",
+      "No valid subset found that adds up to the target.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(n):\n",
+    "        yield a\n",
+    "        a, b = b, a + b\n",
+    "\n",
+    "def findSubset(sequence, target, i=0, subset=[]):\n",
+    "    if target == 0:\n",
+    "        return subset\n",
+    "    if i == len(sequence):\n",
+    "        return None\n",
+    "\n",
+    "    # Include the current element in the subset\n",
+    "    if (i == 0 or sequence[i] != sequence[i - 1] + 1) and sequence[i] <= target:\n",
+    "        new_target = target - sequence[i]\n",
+    "        new_subset = subset + [sequence[i]]\n",
+    "        result = findSubset(sequence, new_target, i + 1, new_subset)\n",
+    "        if result is not None:\n",
+    "            return result\n",
+    "\n",
+    "    # Exclude the current element from the subset\n",
+    "    return findSubset(sequence, target, i + 1, subset)\n",
+    "\n",
+    "number = int(input(\"Enter the number of terms: \"))\n",
+    "target = int(input(\"Enter the target number: \"))\n",
+    "sequence = list(fibonacci(number))\n",
+    "print(\"Fibonacci Sequence:\", sequence)\n",
+    "result = findSubset(sequence, target)\n",
+    "\n",
+    "if result:\n",
+    "    print(\"Subset that adds up to the target:\", result)\n",
+    "else:\n",
+    "    print(\"No valid subset found that adds up to the target.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum Triangulation Cost: 15.30056307974577\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Point:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "def distancePoints(p1, p2):\n",
+    "    dist = math.sqrt((p1.x - p2.x) ** 2 + (p1.y - p2.y) ** 2)\n",
+    "    return dist\n",
+    "\n",
+    "def cost(points, i, j, k):\n",
+    "    p1 = points[i]\n",
+    "    p2 = points[j]\n",
+    "    p3 = points[k]\n",
+    "    perimeter = distancePoints(p1, p2) + distancePoints(p1, p3) + distancePoints(p2, p3)\n",
+    "    return perimeter\n",
+    "\n",
+    "def minimumTriangulation(points, n):\n",
+    "    table = [[0.0] * n for _ in range(n)]\n",
+    "    for gap in range(2, n):\n",
+    "        for i in range(n):\n",
+    "            j = i + gap\n",
+    "            if j < n:\n",
+    "                table[i][j] = float('inf')\n",
+    "                for k in range(i + 1, j):\n",
+    "                    min_cost = table[i][k] + table[k][j] + cost(points, i, j, k)\n",
+    "                    if table[i][j] > min_cost:\n",
+    "                        table[i][j] = min_cost\n",
+    "    return table[0][n - 1]\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    points = [Point(0, 0), Point(1, 0), Point(2, 1), Point(1, 2), Point(0, 2)]  # Points represented as instances of the Point class\n",
+    "    n = len(points)\n",
+    "    result = minimumTriangulation(points, n)\n",
+    "    print(f\"Minimum Triangulation Cost: {result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum Triangulation Cost: 15.30056307974577\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def distancePoints(p1, p2):\n",
+    "    dist = math.sqrt((p1[0] - p2[0]) ** 2 + (p1[1] - p2[1]) ** 2)\n",
+    "    return dist\n",
+    "\n",
+    "def cost(points, i, j, k):\n",
+    "    p1 = points[i]\n",
+    "    p2 = points[j]\n",
+    "    p3 = points[k]\n",
+    "    perimeter = distancePoints(p1, p2) + distancePoints(p1, p3) + distancePoints(p2, p3)\n",
+    "    return perimeter\n",
+    "\n",
+    "def minimumTriangulation(points, n):\n",
+    "    table = [[0.0] * n for _ in range(n)]\n",
+    "    for gap in range(2, n):\n",
+    "        for i in range(n):\n",
+    "            j = i + gap\n",
+    "            if j < n:\n",
+    "                table[i][j] = float('inf')\n",
+    "                for k in range(i + 1, j):\n",
+    "                    min_cost = table[i][k] + table[k][j] + cost(points, i, j, k)\n",
+    "                    if table[i][j] > min_cost:\n",
+    "                        table[i][j] = min_cost\n",
+    "    return table[0][n - 1]\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    points = [(0, 0), (1, 0), (2, 1), (1, 2), (0, 2)]  # Points represented as tuples\n",
+    "    n = len(points)\n",
+    "    result = minimumTriangulation(points, n)\n",
+    "    print(f\"Minimum Triangulation Cost: {result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
